# advent-of-code-2020

./: day1.py  day2.py  pyproject.toml
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day14/: day14.py
day15/: day15.py  pyproject.toml
day2/: day2.py  test_day2.py
day3/: day3.py  test_day3.py
day4/: day4.py  pyproject.toml  test_day4.py
day5/: day5.py  test_day5.py
day6/: test_day6.py
day7/: answer1.py  answer2.py  puzzle_input.txt
day8/: day8.py
day9/: day9.py
