[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = "Advent of code 2020"
authors = ["Pierre Bousquié <pierre.bousquie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
