[tool.poetry]
name = "day15"
version = "0.1.0"
description = ""
authors = ["Pierre Bousquié <pierre.bousquie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transonic = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
