[tool.poetry]
name = "day4"
version = "0.1.0"
description = ""
authors = ["Pierre Bousquié <pierre.bousquie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
